--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "task2-mvc",
+    "name": "AAP",
     "version": "1.0.0",
     "description": "Complete Boiler plate functionality",
     "main": "server.js",
@@ -16,7 +16,7 @@
         "dotenv": "^16.0.0",
         "express": "^4.17.2",
         "express-joi-validation": "^5.0.1",
-        "firebase": "^9.19.1",
+        "firebase": "^8.0.1",
         "helmet": "^4.6.0",
         "joi": "^17.5.0",
         "jsonwebtoken": "^8.5.1",
@@ -24,7 +24,7 @@
         "moment": "^2.29.1",
         "multer": "^1.4.2",
         "nodemailer": "^6.7.2",
-        "nodemon": "^2.0.15",
+        "nodemon": "^2.0.22",
         "winston": "^3.3.3"
     }
 }
